# internal/dto/dto.go
@@ -10,3 +10,12 @@ type CreateProductInput struct {
 	Name  string  `json:"name"`
 	Price float64 `json:"price"`
 }
+
+type GetJWTInput struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type GetJWTOutput struct {
+	AccessToken string `json:"access_token"`
+}
